re-add cfi fix; ios fix attempt; up alpha on colors to make visible on dark bg; re-add default font

--- a/apps/reader/src/pages/styles.css
+++ b/apps/reader/src/pages/styles.css
@@ -134,5 +134,5 @@ p {
 }
 
 .no-context-menu {
-  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-touch-callout: none !important; /* iOS Safari */
 }
